New algorithm for getting list of manifests from installed RPMs.
The algorithm looks for all packages, which have Qt dependencies and
then takes all devel packages built from the same source RPM as the
library with the Qt dependency and turns them into a manifest.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+* Cache list of Qt library RPMs
+* Get description and summary from non-devel package.
+
 * Install a library
 * Show documentation of an library
 * Add "How to use" data
