--- a/TODO
+++ b/TODO
@@ -17,3 +17,4 @@
 * Update manifest data to have complete package data
 * Add tests
 * Properly identify repository (use vendor?)
+* One-click install for SUSE systems
