Read manifests from sub directories.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+* Correctly read manifests, if there are multiple versions
 * Smarter match for source RPMs, which contain more than one library
 * Show documentation of an library
 * Add "How to use" data
