--- a/TODO
+++ b/TODO
@@ -33,3 +33,5 @@
 * Handle binding consistently (suffix -qt, common description, maybe special
   tags in meta data for bound library)
 * Document manifest format
+* Check validity of links
+* Check existence of packages
