--- a/TODO
+++ b/TODO
@@ -1,38 +1,45 @@
-* Second round of manifest cleanup
-* Correctly read manifests, if there are multiple versions
-* Smarter match for source RPMs, which contain more than one library
-* Show documentation of an library
-* Add "How to use" data
-* Define maturity scale
-* Retrieve data from qt-apps and kde-apps
-* "How to package libraries"
-* Add tags for searching
-* Look for local search
-* Get manifests from build service
-* Add option to verify given or all manifests
-* Add show option for showing library details
-* List libraries with available packages
-* Update manifest data to have complete package data
-* Properly identify repository (use vendor?)
-* One-click install for SUSE systems
-* Contribute back package description changes
-* Document manifest format
-* Add download section on library page with source code download and links to
-  packages e.g. openSUSE 1-click install
-* Make sure all manifests have a download link
-* Add links to upstream source code repositories
-* Check match of filename and release date
+# Alpha (first announcement, ready for early adopters)
+
 * Add short explanation at top of home page and link to inqlude@kde.org as
   contact address
 * Add footer with info who is doing this project
-* Look for latest versions of libraries
-* Consistently make all manifest names lowercase
-* Show release date on library page, if it's not 1970-01-01
+* Update get involved
+
+# Beta (ready for contributors of meta data)
+
+* Document manifest format
+* Define maturity scale
 * State policy for inclusion of libraries (at least one stable release, no qt3,
   open source, provides a Qt API, published API docs)
 * Handle binding consistently (suffix -qt, common description, maybe special
   tags in meta data for bound library)
-* Document manifest format
+
 * Check validity of links
+* Add option to verify given manifest
+* Add show option for showing library details
+
+* Look for latest versions of libraries
+* Make sure all manifests have a download link
+* Add links to upstream source code repositories for all libraries
+
+* Add download section on library page with source code download and links to
+  packages e.g. openSUSE 1-click install
+* Show release date on library page
+* Add page with older versions of each library
+
+# 1.0 (ready for end users of the web site)
+
+* Add "How to use" data
+* Add tags for searching
+* Update manifest data to have complete package data
 * Check existence of packages
-* Update get involved
+
+# Later (ready for end users of the command line tool)
+
+* Smarter match for source RPMs, which contain more than one library
+* Retrieve data from qt-apps and kde-apps
+* "How to package libraries"
+* Look for local search
+* Get manifests from build service
+* List libraries with available packages
+* Properly identify repository (use vendor?)
