--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 # Alpha (first announcement, ready for early adopters)
 
+* Link mailing list links to mailman page
 * Add footer with info who is doing this project
 * Update get involved
 
