--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 # Alpha (first announcement, ready for early adopters)
 
 * Implement generic schema
+* Test generation of web site with aruba, especially exit code on error and
+  success
 * No output on successful pull
 * Use kde git URL
 * Replace manifest hash by Manifest object
