--- a/TODO
+++ b/TODO
@@ -1,41 +1,55 @@
-# Alpha (first announcement, ready for early adopters)
+# 0.8 (Alpha) (first announcement, ready for early adopters)
 
-* Implement display_name (including schema versioning)
-* Implement groups (e.g. for KDE or Qt)
-* Update KDE Frameworks 5 libraries
-* Test generation of web site with aruba, especially exit code on error and
-  success
+* Use $XDG_DATA_HOME to store data  High Priority #21
+* Add display name  High Priority #12
 * Use kde git URL
-* Replace manifest hash by Manifest object
+* Create ROADMAP.md
+* Define milestones on GitHub and reference issues
+* Move all issues from this file to GitHub
+* Add Upstream.get_involved for all issues where possible
 
 * Release it
 
-# Beta (ready for contributors of meta data, schema stable)
 
+# 0.9 (Beta) (ready for contributors of meta data, schema stable)
+
+* Replace manifest hash by Manifest object
+* Check platform attribute for valid entries  High Priority #18
+* Check maturity for valid values  High Priority #16
 * Define maturity scale
 * State policy for inclusion of libraries (at least one stable release, no qt3,
   open source, provides a Qt API, published API docs)
 * Handle binding consistently (suffix -qt, common description, maybe special
   tags in meta data for bound library)
-* Allow markdown in description
-  
-* Stabilize schema
-
-* Check validity of links
-* Add show option for showing library details
+* Show Qt5 compability  High Priority #20
+* Link to license text  Medium Priority #14
+* Add a comment field for authors  Medium Priority #15
+* Add attribute for screenshots  Medium Priority #10
+* Add bugtracker URL  Low Priority #7
+* Check links  Medium Priority #11
+* Add command for showing library details  High Priority #1
 
 * Release it
+
 
 # 1.0 (ready for end users of the web site)
 
+* Show latest releases on web page  Medium Priority #22
+* Make layout responsive  Medium Priority Web site #6
+* Align summaries on development page vertically  Low Priority Web site #19
+
 * Add "How to use" data
 * Add tags for searching
+
 * Update manifest data to have complete package data
 * Check existence of packages
 
+* Link to Open Build Service  Low Priority #9
+
 * Release it
 
-# Later (ready for end users of the command line tool)
+
+# 2.0 (ready for end users of the command line tool)
 
 * Smarter match for source RPMs, which contain more than one library
 * Retrieve data from qt-apps and kde-apps
@@ -44,3 +58,13 @@
 * Get manifests from build service
 * List libraries with available packages
 * Properly identify repository (use vendor?)
+
+* Release it
+
+
+# Later
+
+* Create more friendly progress display for cache creation  Low Priority #3
+* Add some quality indication  Low Priority #17
+
+* Release it
